# mapreduce

./: .travis.yml  CMakeLists.txt  filereader.cpp  filereader.h  mapreducer.cpp  mapreducer.h  minunique.cpp  minunique.h
html/: CMakeLists_8txt.html  annotated.html  classFileReader-members.html  classFileReader.html  classMapReducer-members.html  classMapReducer.html  classMinUnique-members.html  classMinUnique.html  classes.html  filereader_8cpp.html  filereader_8cpp__incl.map  filereader_8cpp__incl.md5  filereader_8h.html  filereader_8h__dep__incl.map  filereader_8h__dep__incl.md5  filereader_8h__incl.map  filereader_8h__incl.md5  filereader_8h_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_type.html  mapreduce_8cpp.html  mapreduce_8cpp__incl.map  mapreduce_8cpp__incl.md5  mapreducer_8cpp.html  mapreducer_8cpp__incl.map  mapreducer_8cpp__incl.md5  mapreducer_8h.html  mapreducer_8h__dep__incl.map  mapreducer_8h__dep__incl.md5  mapreducer_8h__incl.map  mapreducer_8h__incl.md5  mapreducer_8h_source.html  minunique_8cpp.html  minunique_8cpp__incl.map  minunique_8cpp__incl.md5  minunique_8h.html  (+7 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  files_1.js  (+13 more)
latex/: CMakeLists_8txt.tex  annotated.tex  classFileReader.tex  classMapReducer.tex  classMinUnique.tex  filereader_8cpp.tex  filereader_8cpp__incl.md5  filereader_8h.tex  filereader_8h__dep__incl.md5  filereader_8h__incl.md5  files.tex  mapreduce_8cpp.tex  mapreduce_8cpp__incl.md5  mapreducer_8cpp.tex  mapreducer_8cpp__incl.md5  mapreducer_8h.tex  mapreducer_8h__dep__incl.md5  mapreducer_8h__incl.md5  minunique_8cpp.tex  minunique_8cpp__incl.md5  minunique_8h.tex  minunique_8h__dep__incl.md5  minunique_8h__incl.md5  pretty_8h.tex  refman.tex
